reworked structure and added nginx

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -17,7 +17,7 @@ server {
     alias /src/static/;
   }
   location /media/ {
-    alias /src/staticfiles/media/;
+    alias /src/static/media/;
   }
   gzip on;
   gzip_types text/css text/javascript application/x-javascript application/json;
