--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
     volumes:
       - ./src:/src
       - ./config/nginx:/etc/nginx/conf.d
+      - /etc/ssl/certs:/etc/nginx/certs
     depends_on:
       - flask
     restart: always
@@ -18,8 +19,7 @@ services:
         ipv4_address: 10.4.0.2
 
   flask:
-    build:
-      context: ./
+    build: .
     container_name: flask
     volumes:
       - ./src:/src
