Dockerized, added nginx proxy manager

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: 'db_rootpassword'
-      MYSQL_DATABASE: 'database'
+      MYSQL_DATABASE: 'db_name'
       MYSQL_USER: 'db_user'
       MYSQL_PASSWORD: 'db_password'
     volumes:
