--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     build: .
     container_name: CSVToCSVW_with_Flask
     volumes:
-      - .:/src
+      #- .:/src
     ports:
-      - 5000:5000
+      - 5001:5000
     restart: always
     networks:
       - CSVToCSVW
