--- a/.github/workflows/PublishContainer.yml
+++ b/.github/workflows/PublishContainer.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           registry: ghcr.io
           username: "ThHanke"
-          password: ${{ secrets.PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           repository: ThHanke/csv2csvw
           tags: latest
