--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -16,8 +16,8 @@ jobs:
         run: |
           for file in examples/rdf/*.csv 
             do 
-              RESULT=$(curl -X POST "http://localhost:5000/api" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"@$file"}");
-              echo "$RESULT"
+              RESULT=$(curl -X POST "http://localhost:5000/api" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"@$file\"}");
+              echo "$RESULT";
             done
       - name: Commit files # commit the output folder
         run: |
