--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -12,12 +12,14 @@ jobs:
         run: |
           docker-compose up -d
           sleep 10
+          docker ps -a
       - name: create csvw json-ld
         run: |
           for file in examples/rdf/*.csv 
             do 
               RESULT=$(curl -X POST "http://localhost:5000/api" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"@$file\"}");
               echo "$RESULT";
+              echo "$RESULT" | jq -r '.filename';
             done
       - name: Commit files # commit the output folder
         run: |
