--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -17,8 +17,8 @@ jobs:
         run: |
           for file in examples/rdf/*.csv 
             do
-              echo "@file";
-              RESULT=$(curl -X POST "http://localhost:5001/api" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/@file\"}");
+              echo "@$file";
+              RESULT=$(curl -X POST "http://localhost:5001/api" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"@$file\"}");
               echo "$RESULT";
               echo "$RESULT" | jq -r '.filename';
             done
