--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -15,19 +15,19 @@ jobs:
           docker ps -a
       - name: create csvw json-ld
         run: |
-          for file in examples/rdf/*.csv 
+          for file in examples/*.csv 
             do
-              echo "@$file";
-              RESULT=$(curl -X POST "http://localhost:5001/api" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"@$file\"}");
-              echo "$RESULT";
-              echo "$RESULT" | jq -r '.filename';
+              echo "@$file"
+              RESULT=$(curl -X POST "http://localhost:5001/api" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"@$file\"}")
+              echo "$RESULT"
+              echo "$RESULT" | jq -r '.filename'
             done
       - name: Commit files # commit the output folder
         run: |
           git config --local user.email "csvtocsvw.action@github.com";
-          git config --local user.name "Test Examples Action"
-          git add examples/\*
-          git commit -m "created example json-ld files"  
+          git config --local user.name "Test Examples Action";
+          git add examples/\*;
+          git commit -m "created example json-ld files";  
       - name: Push changes # push the output folder to your repo
         uses: ad-m/github-push-action@master
         with:
