--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -24,8 +24,8 @@ jobs:
             do
               echo "$file"
               RESULT=$(curl -X POST "http://localhost:5001/api" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file\"}")
-              FILEDATA=$RESULT" | jq -r '.filedata'
-              FILENAME=$RESULT" | jq -r '.filename'
+              FILEDATA=${$RESULT" | jq -r '.filedata'}
+              FILENAME=${$RESULT" | jq -r '.filename'}
               echo "$FILENAME"
               echo "$FILEDATA" > "./$FILENAME"
             done
