--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -24,10 +24,10 @@ jobs:
             do
               echo "$file"
               RESULT=$(curl -X POST "http://localhost:5001/api" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file\"}")
-              FILEDATA=${echo '$RESULT' | jq -r '.filedata'}
-              FILENAME=${echo'$RESULT' | jq -r '.filename'}
-              echo '$FILENAME'
-              echo '$FILEDATA' > 'FILENAME'
+              FILEDATA=$(echo $RESULT | jq -r '.filedata')
+              FILENAME=${echo $RESULT | jq -r '.filename')
+              echo $FILENAME
+              echo $FILEDATA > FILENAME
             done
       - name: Commit files # commit the output folder
         run: |
