--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -25,9 +25,9 @@ jobs:
               echo "$file"
               RESULT=$(curl -X POST "http://localhost:5001/api" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file\"}")
               FILEDATA=$(echo $RESULT | jq -r '.filedata')
-              FILENAME=${echo $RESULT | jq -r '.filename')
+              FILENAME=$(echo $RESULT | jq -r '.filename')
               echo $FILENAME
-              echo $FILEDATA > FILENAME
+              echo $FILEDATA > $FILENAME
             done
       - name: Commit files # commit the output folder
         run: |
