--- a/.github/workflows/PublishContainer.yml
+++ b/.github/workflows/PublishContainer.yml
@@ -5,7 +5,10 @@
 
 name: Publish Docker image
 
-on: [published, workflow_dispatch]
+on:
+  release:
+    types: [published]
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
