--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./:/src
     ports:
-      - 5001:5000
+      - ${APP_PORT}:5000
     restart: always
     networks:
       - csvtocsvw_net
