qudt downloaded in dockerfile to onologies folder, annotator.py uses local copy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       APP_MODE: "development"
     volumes:
-      - ./:/src
+    #  - ./:/src
     ports:
       - ${APP_PORT}:5000
     restart: always
