added health check

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,11 @@ services:
     restart: always
     networks:
       - csvtocsvw_net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/info"]
+      interval: 10s
+      timeout: 10s
+      retries: 20
 
 networks:
   csvtocsvw_net:
