--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -20,7 +20,7 @@ jobs:
       - name: run app
         run: |
           docker-compose up -d
-          sleep 5
+          sleep 10
           docker ps -a
       - name: create csvw json-ld
         working-directory: ${{env.WORKING_DIR}}
@@ -29,7 +29,7 @@ jobs:
           for file in *.csv 
             do
               echo "$file"
-              RESULT=$(curl -X POST "http://0.0.0.0:${{env.APP_PORT}}/api" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file\"}")
+              RESULT=$(curl -X POST "http://localhost:${{env.APP_PORT}}/api" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file\"}")
               FILEDATA=$(echo $RESULT | jq -r '.filedata')
               FILENAME=$(echo $RESULT | jq -r '.filename')
               echo $FILENAME
