--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -19,7 +19,9 @@ jobs:
           fetch-depth: 0        
       - name: run app
         run: |
-          docker-compose up --wait
+          # docker-compose up --wait
+          docker-compose up -d
+          sleep 10s
           docker ps -a
       - name: create csvw json-ld
         working-directory: ${{env.WORKING_DIR}}
