updated test workflow

--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -30,7 +30,12 @@ jobs:
           for file in *.csv 
             do
               echo "$file"
-              RESULT=$(curl -X POST "http://localhost:${{env.APP_PORT}}/api" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file\"}")
+              RESULT=$(curl -X POST "http://localhost:${{env.APP_PORT}}/api/annotation" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"data_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file\"}")
+              FILEDATA=$(echo $RESULT | jq -r '.filedata')
+              FILENAME=$(echo $RESULT | jq -r '.filename')
+              echo $FILENAME
+              jq . <<< "$FILEDATA" > $FILENAME
+              RESULT=$(curl -X POST "http://localhost:${{env.APP_PORT}}/api/rdf" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"metadata_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file-metadata.json\"}")
               FILEDATA=$(echo $RESULT | jq -r '.filedata')
               FILENAME=$(echo $RESULT | jq -r '.filename')
               echo $FILENAME
