--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -36,10 +36,12 @@ jobs:
               echo $FILENAME
               jq . <<< "$FILEDATA" > $FILENAME
               RESULT=$(curl -X POST "http://localhost:${{env.APP_PORT}}/api/rdf" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"metadata_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file-metadata.json\"}")
-              FILEDATA=$(echo $RESULT | jq -r '.filedata')
               FILENAME=$(echo $RESULT | jq -r '.filename')
               echo $FILENAME
               jq . <<< "$FILEDATA" > $FILENAME
+              DATA="$(jq .filedata <<< "$RESULT")"
+              #remove quots
+              echo -e "${DATA:1:-1}" > $FILENAME
             done
           docker logs csvtocsvw
       - name: Commit files # commit the output folder
