--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -36,16 +36,16 @@ jobs:
               echo $FILENAME
               jq . <<< "$FILEDATA" > $FILENAME
             done
-          for file in *.json 
-            do
-              echo "$file"
-              RESULT=$(curl -X POST "http://localhost:${{env.APP_PORT}}/api/rdf" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"metadata_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file\"}")
-              FILENAME=$(echo $RESULT | jq -r '.filename')
-              echo $FILENAME
-              DATA="$(jq .filedata <<< "$RESULT")"
-              #remove quots
-              echo -e "${DATA:1:-1}" > $FILENAME
-            done
+          # for file in *.json 
+          #   do
+          #     echo "$file"
+          #     RESULT=$(curl -X POST "http://localhost:${{env.APP_PORT}}/api/rdf" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"metadata_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file\"}")
+          #     FILENAME=$(echo $RESULT | jq -r '.filename')
+          #     echo $FILENAME
+          #     DATA="$(jq .filedata <<< "$RESULT")"
+          #     #remove quots
+          #     echo -e "${DATA:1:-1}" > $FILENAME
+          #   done
           docker logs csvtocsvw
       - name: Commit files # commit the output folder
         uses: EndBug/add-and-commit@v9
