--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -36,6 +36,15 @@ jobs:
               echo $FILENAME
               jq . <<< "$FILEDATA" > $FILENAME
             done
+      - name: create csvw rdf
+        working-directory: ${{env.WORKING_DIR}}
+        run: |
+          docker logs csvtocsvw
+          for file in *-metadata.json 
+            do
+              echo "$file"
+              curl -X POST "http://localhost:${{env.APP_PORT}}/api/annotation" -H  "accept: application/json" -H  "accept: application/json" -H  "Content-Type: application/json" -d "{\"metadata_url\":\"https://github.com/Mat-O-Lab/CSVToCSVW/raw/main/examples/$file\"}" -O -J
+            done
       - name: Commit files # commit the output folder
         uses: EndBug/add-and-commit@v9
         with:
