--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -19,8 +19,8 @@ jobs:
           fetch-depth: 0        
       - name: run app
         run: |
-          # docker-compose -f docker-compose.develop.yml up --wait
-          docker-compose up -d
+          docker-compose -f docker-compose.develop.yml up --wait
+          #docker-compose up -d
           sleep 10s
           docker ps -a
       - name: create csvw json-ld
