--- a/.github/workflows/TestExamples.yml
+++ b/.github/workflows/TestExamples.yml
@@ -19,7 +19,7 @@ jobs:
           fetch-depth: 0        
       - name: run app
         run: |
-          docker-compose -f docker-compose.develop.yml up --wait
+          docker-compose -f docker-compose.develop.yml up -d
           #docker-compose up -d
           sleep 10s
           docker ps -a
